--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "build": "babel api -d lib",
     "lint": "eslint ./api --fix"
   },
+  "engines": {
+    "node": "8.11.3",
+    "npm": "5.6.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/youngestdj/Fast-Food-Fast.git"
