--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test-init": "jasmine init",
     "test": "jasmine lib/spec/spec.*.js",
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "build": "babel api -d lib",
     "lint": "eslint ./api --fix"
   },
