--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
 language: node_js
 node_js:
   - "8"
-after_script: ./node_modules/coveralls/bin/coveralls.js
+addons:
+  code_climate:
+    repo_token: 6b9dca1f9f0070c2ea399ce8a5ead0c5eb8f1995d716dc014ad64ada5f659a62
+script: istanbul cover npm run test -- -R spec
+before_script:
+  - npm install codeclimate-test-reporter istanbul -g
+after_script:
+  - codeclimate-test-reporter < ./coverage/lcov.info
+
