--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ addons:
     repo_token: 6b9dca1f9f0070c2ea399ce8a5ead0c5eb8f1995d716dc014ad64ada5f659a62
 script: istanbul cover npm run test
 before_script:
-  - npm install codeclimate-test-reporter istanbul -g
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 after_script:
-  - codeclimate-test-reporter < ./coverage/lcov.info
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
