--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,6 @@ before_script:
   - ./cc-test-reporter before-build
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
-
+after_success:
+  - npm run coverage
+  - npm run report-coverage
