--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test-init": "jasmine init",
-    "test": "jasmine lib/spec/spec.*.js",
+    "test": "jasmine api/spec/spec.*.js",
     "start": "node server.js",
     "build": "babel api -d lib",
     "lint": "eslint ./api --fix",
