--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "lint": "eslint ./api --fix",
     "coverage": "istanbul cover node_modules/jasmine/bin/jasmine.js lib/spec/spec.*.js",
     "report-coverage": "cat ./coverage/lcov.info | coveralls"
-
   },
   "engines": {
     "node": "8.11.3",
@@ -29,8 +28,12 @@
   "homepage": "https://github.com/youngestdj/Fast-Food-Fast#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "jasmine": "^3.2.0",
+    "jsonwebtoken": "^8.3.0",
+    "password-hash": "^1.2.2",
+    "pg": "^7.4.3",
     "request": "^2.88.0"
   },
   "devDependencies": {
