--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,9 @@ before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
-  - psql -c 'create database travis_ci_test;' -U postgres
+  - psql -c 'CREATE USER postgres WITH CREATEDB;' -U postgres
+  - psql -c 'CREATE database travis_ci_test;' -U postgres
+  - psql -c 'ALTER DATABASE travis_ci_test OWNER TO postgres' -U postgres
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 after_success:
