--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "jsonwebtoken": "^8.3.0",
     "password-hash": "^1.2.2",
     "pg": "^7.4.3",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "supertest": "^3.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
